<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:gravity="center"
    android:animateLayoutChanges="true"
    tools:context="edu.chapman.cpsc356.truefalse.activities.MainActivity">

    <TextView
        android:id="@+id/tv_question"
        tools:text="Is this a live band playing outside of the room right now ?"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        >

        <Button
            android:layout_width="120dp"
            android:onClick="onClickTrue"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/true_display"
            />

        <Button
            android:onClick="onClickFalse"
            android:layout_width="120dp"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="@string/false_display"/>



    </LinearLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="23sp"
        android:visibility="gone"
        tools:text="Placeholder Answer"
        />

    <Button
        android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
        android:paddingStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNext"
        android:text="@string/next"/>

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStartNew"
        android:text="@string/start_new_activity"/>

</LinearLayout>
