<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="edu.chapman.cpsc356.truefalse.activities.CheatActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:text="@string/another_confirmation"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNo"
            android:text="@string/no"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickYes"
            android:text="@string/yes"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cheat_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        />

</LinearLayout>
